Add Separate css files

--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -8,8 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../styles/jobs.css">
+
+    <!-- Estilos -->
+    <link rel="stylesheet" href="../styles/Jobs/header.css">
+    <link rel="stylesheet" href="../styles/Jobs/main-filters.css">
+    <link rel="stylesheet" href="../styles/Jobs/main-jobs.css">
+    
+    <!--link rel="stylesheet" href="../styles/header.css"-->
+
     <title>Job Portal</title>
+
     <script src="https://kit.fontawesome.com/82bf3eaf6b.js" crossorigin="anonymous"></script>
 </head>
 
@@ -364,7 +372,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="job-card">
+                            <article class="job-card">
                                 <div class="job-meta">
                                     <span class="time-label">10 min ago</span>
                                     <i class="far fa-bookmark save-icon"></i>
@@ -383,9 +391,9 @@
                                     <span><i class="fas fa-map-marker-alt icons"></i> Stockholm, Sweden</span>
                                     <button class="job-btn">Job Details</button>
                                 </div>
-                            </div>
+                            </article>
 
-                            <div class="job-card">
+                            <article class="job-card">
                                 <div class="job-meta">
                                     <span class="time-label">12 min ago</span>
                                     <i class="far fa-bookmark save-icon"></i>
@@ -404,9 +412,9 @@
                                     <span><i class="fas fa-map-marker-alt icons"></i> Cupertino, USA</span>
                                     <button class="job-btn">Job Details</button>
                                 </div>
-                            </div>
+                            </article>
 
-                            <div class="job-card">
+                            <article class="job-card">
                                 <div class="job-meta">
                                     <span class="time-label">15 min ago</span>
                                     <i class="far fa-bookmark save-icon"></i>
@@ -425,9 +433,9 @@
                                     <span><i class="fas fa-map-marker-alt icons"></i> Mountain View, USA</span>
                                     <button class="job-btn">Job Details</button>
                                 </div>
-                            </div>
+                            </article>
 
-                            <div class="job-card">
+                            <article class="job-card">
                                 <div class="job-meta">
                                     <span class="time-label">24 min ago</span>
                                     <i class="far fa-bookmark save-icon"></i>
@@ -446,9 +454,9 @@
                                     <span><i class="fas fa-map-marker-alt icons"></i> Redmond, USA</span>
                                     <button class="job-btn">Job Details</button>
                                 </div>
-                            </div>
+                            </article>
 
-                            <div class="job-card">
+                            <article class="job-card">
                                 <div class="job-meta">
                                     <span class="time-label">26 min ago</span>
                                     <i class="far fa-bookmark save-icon"></i>
@@ -467,7 +475,7 @@
                                     <span><i class="fas fa-map-marker-alt icons"></i> Seattle, USA</span>
                                     <button class="job-btn">Job Details</button>
                                 </div>
-                            </div>
+                            </article>
                         </div>
                     </div>
                 </section>
