Add Responsive Headres & Jobs Sections

--- a/pages/home.html
+++ b/pages/home.html
@@ -110,7 +110,7 @@
             <h2>Recent Jobs Available</h2>
             <div class="header">
                 <p>At eu lobortis pretium tristique amet lacus ut aenean aliquet...</p>
-                <a href="#" class="view-all">View all</a>
+                <a href="#" class="view-all view-all-up">View all</a>
             </div>
 
             <div class="job-list">
@@ -223,6 +223,8 @@
                         <button class="job-btn">Job Details</button>
                     </div>
                 </div>
+
+                <a href="#" class="view-all view-all-down">View all</a>
             </div>
 
     </section>
