Add Responsive Categories Section

--- a/pages/home.html
+++ b/pages/home.html
@@ -401,6 +401,7 @@
         </div>
     </section>
 
+    <!-- Seccion Blog -->
     <section class="blog-section">
         <div class="container-blog">
             <div class="blog-header">
