Add Responsive Info Section

--- a/pages/home.html
+++ b/pages/home.html
@@ -291,7 +291,7 @@
                     eos.</p>
                 <div class="info-buttons">
                     <button class="btn-info primary">Search Job</button>
-                    <button class="btn-info secondary">Learn more</button>
+                    <button id="learn-more" class="btn-info secondary">Learn more</button>
                 </div>
             </div>
         </div>
