Add Responsive Blog Section

--- a/pages/home.html
+++ b/pages/home.html
@@ -410,7 +410,7 @@
                     <p class="subtitle-blog-section">
                         Metus faucibus sed turpis lectus feugiat tincidunt. Rhoncus sed tristique in dolor
                     </p>
-                    <a href="#" class="view-all">View all</a>
+                    <a id="view-blogs" href="#" class="view-all">View all</a>
                 </div>
 
             </div>
@@ -450,6 +450,23 @@
 
                     </div>
                 </div>
+
+                <!-- Tarjeta 3 -->
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <span class="badge blog-badge">Blog</span>
+                    </div>
+                    <div class="blog-content">
+                        <p class="date">5 March 2025</p>
+                        <h3 class="blog-title">
+                            The Future of Remote Work: Trends and Predictions for 2025
+                        </h3>
+                        <div class="read-more">
+                            <a href="#">Read more </a>
+                            <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -467,7 +484,7 @@
                     Quis enim pellentesque viverra tellus eget malesuada facilisis. Congue nibh vivamus aliquet nunc
                     mauris d...
                 </p>
-                
+
             </div>
 
             <!-- Sección de la empresa -->
@@ -517,7 +534,7 @@
                 <a href="#">Privacy Policy</a>
                 <a href="#">Terms & Conditions</a>
             </div>
-            
+
         </div>
 
     </div>
