--- a/pages/home.html
+++ b/pages/home.html
@@ -512,7 +512,7 @@
             </div>
 
             <!-- Sección de newsletter -->
-            <div class="footer-col">
+            <div class="footer-col newsletter-section">
                 <h3 class="footer-title">Newsletter</h3>
                 <p class="footer-text">
                     Eu nunc pretium vitae platea. Non netus elementum vulputate
@@ -528,7 +528,7 @@
         <!-- Políticas -->
         <div class="footer-bottom">
             <p class="copyright">
-                © Copyright Job Portal 2025. Designed by JobPortal Team
+                © Copyright Job Portal 2025. Designed by JMJ Jobs Team
             </p>
             <div class="terms-btn">
                 <a href="#">Privacy Policy</a>
