added What is JMJ and How it works to content in about us page

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -54,20 +54,53 @@
 
     <!-- Main -->
     <main>
-        <section class="about">
-            <div class="container-about">
-                <div class="about__content">
-                    <h2 class="about__title">About Us</h2>
-                    <p class="about__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien egestas
-                        fermentum. Nullam nec nisl nec nisl ultricies aliquam. Nulla facilisi. Nulla facilisi. Nulla
-                        facil
-                        isi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla facilisi. Nulla
-                    </p>
-                </div> 
+        <!-- What Is JMJ -->
+        <section class="content">
+            <div class="text">
+                <h2>What is JMJ Portal?</h2>
+                <p>Nunc sed a nisl purus. Nibh dis faucibus proin lacus tristique. Sit congue non vitae odio sit erat in. 
+                Felis eu ultrices a sed massa. Commodo fringilla sed tempor risus laoreet ultrices ipsum. 
+                Habitasse morbi faucibus in iaculis lectus. Nisi enim feugiat enim volutpat. 
+                Sem quis viverra viverra odio mauris nunc.</p>
             </div>
-
+            <div class="image">
+                <img src="../img/banner.png" alt="JMJ Workers">
+            </div>
         </section>
+
+        <!-- How It Works -->
+        <section class="how-it-works">
+            <div class="container">
+                <h2>How it works</h2>
+                <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet. Blandit a massa elementum id scelerisque rhoncus...</p>
+                
+                <div class="steps">
+                    <div class="step">
+                        <img src="../img/icons/bag.png" alt="Create Account">
+                        <h3>Create Account</h3>
+                        <p>Nunc sed a nisl purus. Nibh dis faucibus proin lacus.</p>
+                    </div>
+                    <div class="step">
+                        <img src="../img/icons/bag.png" alt="Upload Resume">
+                        <h3>Upload Resume</h3>
+                        <p>Felis eu ultrices a sed massa. Commodo fringilla sed tempor.</p>
+                    </div>
+                    <div class="step">
+                        <img src="../img/icons/bag.png" alt="Find Jobs">
+                        <h3>Find Jobs</h3>
+                        <p>Commodo fringilla sed tempor risus laoreet ultricies ipsum.</p>
+                    </div>
+                    <div class="step">
+                        <img src="../img/icons/bag.png" alt="Apply Job">
+                        <h3>Apply Job</h3>
+                        <p>Nisi enim feugiat enim volutpat. Sem quis viverra.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+
+
     </main>
 
     <!-- Footer -->
