icons change into how it works section

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -76,22 +76,22 @@
                 
                 <div class="steps">
                     <div class="step">
-                        <img src="../img/icons/bag.png" alt="Create Account">
+                        <img src="../img/icons/createa-account.svg" alt="Create Account">
                         <h3>Create Account</h3>
                         <p>Nunc sed a nisl purus. Nibh dis faucibus proin lacus.</p>
                     </div>
                     <div class="step">
-                        <img src="../img/icons/bag.png" alt="Upload Resume">
+                        <img src="../img/icons/upload.svg" alt="Upload Resume">
                         <h3>Upload Resume</h3>
                         <p>Felis eu ultrices a sed massa. Commodo fringilla sed tempor.</p>
                     </div>
                     <div class="step">
-                        <img src="../img/icons/bag.png" alt="Find Jobs">
+                        <img src="../img/icons/bag-white.svg" alt="Find Jobs">
                         <h3>Find Jobs</h3>
                         <p>Commodo fringilla sed tempor risus laoreet ultricies ipsum.</p>
                     </div>
                     <div class="step">
-                        <img src="../img/icons/bag.png" alt="Apply Job">
+                        <img src="../img/icons/check.svg" alt="Apply Job">
                         <h3>Apply Job</h3>
                         <p>Nisi enim feugiat enim volutpat. Sem quis viverra.</p>
                     </div>
