Add filter button for mobile view and update styles for sidebar

--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -66,6 +66,14 @@
 
             <!-- Bloque de filtro-->
             <div class="jobs__side-bar">
+
+                <!--Boton de filtro: solamente en movil-->
+                <button class="button button--filters">
+                    <span class="button__text">Filters</span>
+                    <span class="button__icon">
+                        <i class="fa-solid fa-sliders"></i>
+                    </span>
+                  </button>
                 
                 <aside class="jobs__filters-container">
                     <!--Sección Buscar por titulo-->
