--- a/pages/contact.html
+++ b/pages/contact.html
@@ -51,8 +51,119 @@
 
     <!-- Main -->
     <main>
-        
+        <!-- Contact Section -->
+        <section class="contact-section">
+            <div class="contact-info">
+              <div class="info-text">
+                <h2 class="info-heading">
+                  You Will Grow, You Will Succeed. We Promise That
+                </h2>
+                <p class="info-description">
+                  Pellentesque arcu facilisis nunc mi proin. Dignissim mattis in
+                  lectus tincidunt tincidunt ultrices. Diam convallis morbi
+                  pellentesque adipiscing
+                </p>
+              </div>
+              <div class="contact-cards">
+                <div class="contact-card">
+                  <img
+                    src="https://cdn.builder.io/api/v1/image/assets/TEMP/a9440b291865bd6905311cd5c1f614999115b5d35bd15b687f8f43ea7344af19?placeholderIfAbsent=true&apiKey=4a163ec6618e4cad9c191dc8815375f1"
+                    alt="Phone"
+                    class="card-icon"
+                  />
+                  <h3 class="card-title">Call for inquiry</h3>
+                  <p class="card-text">+257 388-6895</p>
+                </div>
+                <div class="contact-card">
+                  <img
+                    src="https://cdn.builder.io/api/v1/image/assets/TEMP/48ac33a6925612f63ba472c51acd83d34e092062f21a78fbc0c3a93a0f3b3a3b?placeholderIfAbsent=true&apiKey=4a163ec6618e4cad9c191dc8815375f1"
+                    alt="Email"
+                    class="card-icon"
+                  />
+                  <h3 class="card-title">Send us email</h3>
+                  <p class="card-text">kramulous@sbcglobal.net</p>
+                </div>
+                <div class="contact-card">
+                  <img
+                    src="https://cdn.builder.io/api/v1/image/assets/TEMP/6f5e8401bfa2f46c125dbe2b5fb3d879198fe60404c4ea5e5c1a0f9c35026768?placeholderIfAbsent=true&apiKey=4a163ec6618e4cad9c191dc8815375f1"
+                    alt="Clock"
+                    class="card-icon"
+                  />
+                  <h3 class="card-title">Opening hours</h3>
+                  <p class="card-text">Mon - Fri: 10AM - 10PM</p>
+                </div>
+                <div class="contact-card">
+                  <img
+                    src="https://cdn.builder.io/api/v1/image/assets/TEMP/5703d4dc1817c47b226819428573a11c62a5c812022617f17eb9819d967bcabf?placeholderIfAbsent=true&apiKey=4a163ec6618e4cad9c191dc8815375f1"
+                    alt="Location"
+                    class="card-icon"
+                  />
+                  <h3 class="card-title">Office</h3>
+                  <p class="card-text">19 North Road Piscataway, NY 08854</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="contact-form-container">
+              <div class="form-header">
+                <h2 class="form-title">Contact Info</h2>
+                <p class="form-subtitle">
+                  Nibh dis faucibus proin lacus tristique
+                </p>
+              </div>
+              <form class="contact-form">
+                <div class="form-row">
+                  <div class="form-group">
+                    <label for="firstName" class="form-label">First Name</label>
+                    <input
+                      type="text"
+                      id="firstName"
+                      class="form-input"
+                      placeholder="Your name"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="lastName" class="form-label">Last Name</label>
+                    <input
+                      type="text"
+                      id="lastName"
+                      class="form-input"
+                      placeholder="Your last name"
+                    />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="email" class="form-label">Email Address</label>
+                  <input
+                    type="email"
+                    id="email"
+                    class="form-input"
+                    placeholder="Your E-mail address"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="message" class="form-label">Message</label>
+                  <textarea
+                    id="message"
+                    class="form-textarea"
+                    placeholder="Your message..."
+                  ></textarea>
+                </div>
+                <button type="submit" class="submit-button">Send Message</button>
+              </form>
+            </div>
+          </section>
     </main>
+
+    <!-- Map Section -->
+    <section>
+
+    </section>
+
+    <!-- Advisors -->
+    <section>
+        
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
