--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../styles/contact/header.css">
     <link rel="stylesheet" href="../styles/contact/main.css">
     <link rel="stylesheet" href="../styles/contact/footer.css">
+    <link rel="stylesheet" href="../styles/contact/contact.css">
+    <link rel="stylesheet" href="../styles/contact/map.css">
     <title>Contact Us</title>
 </head>
 <body>
@@ -162,7 +164,7 @@
 
     <!-- Advisors -->
     <section>
-        
+
     </section>
 
     <!-- Footer -->
