--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../styles/contact/footer.css">
     <link rel="stylesheet" href="../styles/contact/contact.css">
     <link rel="stylesheet" href="../styles/contact/map.css">
+    <link rel="stylesheet" href="../styles/contact/partners.css">
     <title>Contact Us</title>
 </head>
 
@@ -132,9 +133,16 @@
         </div>
     </section>
 
-    <!-- Advisors -->
-    <section>
-
+    <!-- Partners Section -->
+    <section class="partners-section">
+        <div class="partners-container">
+            <div class="partners-logos">
+                <img src="../img/logos/zoom.png" alt="Zoom" class="partner-logo" />
+                <img src="../img/logos/tinder.png" alt="Tinder" class="partner-logo" />
+                <img src="../img/logos/dribbble.png" alt="dribbble" class="partner-logo" />
+                <img src="../img/logos/asana.png" alt="asana" class="partner-logo" />
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
