--- a/pages/home.html
+++ b/pages/home.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Job Portal - Find Your Dream Job Today! Connecting Talent with Opportunity: Your Gateway to Career Success.">
+    <meta name="keywords" content="jobs, employment, career, job search, job portal, hiring, recruitment">
+    <meta name="author" content="JMJ Jobs Team">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Job Portal - Find Your Dream Job Today!">
+    <meta property="og:description" content="Connecting Talent with Opportunity: Your Gateway to Career Success.">
+    <meta property="og:image" content="https://example.com/path/to/your/image.jpg">
+    <link rel="icon" href="../img/logos/jmj blanco.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
@@ -27,7 +35,10 @@
     <div class="home">
         <header>
             <div class="container-header">
-                <h1 class="logo">Job Portal</h1>
+                <h1 class="logo">
+                    <img src="../img/logos/jmj blanco.svg" alt="JMJ LOGO">
+
+                </h1>
                 <nav>
                     <ul class="nav-links">
                         <li><a href="home.html">Home</a></li>
@@ -483,7 +494,7 @@
 
             <!-- Sección de descripción -->
             <div class="footer-col footer-about">
-                <h1 class="footer-logo">Job</h1>
+                <h1 class="footer-logo"><img src="../img/logos/jmj blanco.svg" alt=""></h1>
                 <p class="footer-text">
                     Quis enim pellentesque viverra tellus eget malesuada facilisis. Congue nibh vivamus aliquet nunc
                     mauris d...
