Add lazy loading to job logos and map image for improved performance

--- a/pages/job-details.html
+++ b/pages/job-details.html
@@ -70,7 +70,7 @@
                 <i class="far fa-bookmark save-icon"></i>
             </div>
             <div class="job-header">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify" class="company-job-logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify" class="company-job-logo" loading="lazy">
                 <div class="job-details">
                     <h3>Cybersecurity Director</h3>
                     <p>Spotify</p>
@@ -161,7 +161,7 @@
                             <i class="far fa-bookmark save-icon"></i>
                         </div>
                         <div class="job-header">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify" class="company-job-logo">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify" class="company-job-logo" loading="lazy">
                             <div class="job-details">
                                 <h3>Cybersecurity Director</h3>
                                 <p>Spotify</p>
@@ -182,7 +182,7 @@
                             <i class="far fa-bookmark save-icon"></i>
                         </div>
                         <div class="job-header">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple" class="company-job-logo">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple" class="company-job-logo" loading="lazy">
                             <div class="job-details">
                                 <h3>UI/UX Designer</h3>
                                 <p>Apple</p>
@@ -203,7 +203,7 @@
                             <i class="far fa-bookmark save-icon"></i>
                         </div>
                         <div class="job-header">
-                            <img src='https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_"G"_logo.svg' alt="Google" class="company-job-logo">
+                            <img src='https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_"G"_logo.svg' alt="Google" class="company-job-logo" loading="lazy">
                             <div class="job-details">
                                 <h3>Cloud Solutions Engineer</h3>
                                 <p>Google</p>
@@ -224,7 +224,7 @@
                             <i class="far fa-bookmark save-icon"></i>
                         </div>
                         <div class="job-header">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Microsoft" class="company-job-logo">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Microsoft" class="company-job-logo" loading="lazy">
                             <div class="job-details">
                                 <h3>Software Engineer - AI</h3>
                                 <p>Microsoft</p>
@@ -245,7 +245,7 @@
                             <i class="far fa-bookmark save-icon"></i>
                         </div>
                         <div class="job-header">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Amazon_icon.svg" alt="Amazon" class="company-job-logo">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Amazon_icon.svg" alt="Amazon" class="company-job-logo" loading="lazy">
                             <div class="job-details">
                                 <h3>Data Scientist</h3>
                                 <p>Amazon</p>
@@ -375,7 +375,7 @@
                     <!-- Sección de mapa (o imagen/iframe) -->
                     <div class="job-overview__map">
                       <!-- Aquí puedes usar una imagen estática o un iframe de Google Maps -->
-                      <img src="images/map-example.png" alt="Map location">
+                      <img src="images/map-example.png" alt="Map location" loading="lazy">
                     </div>
                   </aside>
                 
