Edit dark-mode home folder

--- a/pages/home.html
+++ b/pages/home.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="../styles/home/testimonials.css">
     <link rel="stylesheet" href="../styles/home/blog.css">
     <link rel="stylesheet" href="../styles/home/footer.css">
-    <link rel="stylesheet" href="../styles/home/dark-mode.css">
+    <link rel="stylesheet" href="../styles/dark-mode.css">
 
     <title>Job Portal</title>
     <script src="https://kit.fontawesome.com/82bf3eaf6b.js" crossorigin="anonymous"></script>
@@ -358,7 +358,7 @@
                         vestibulum venenatis.
                     </p>
                     <div class="testimonial-footer">
-                        <img src="../img/young-bearded-man-with-striped-shirt.jpg" alt="Marco Kihn" class="avatar">
+                        <img src="../img/young-bearded-man-with-striped-shirt.jpg" alt="Marco Kihn" class="avatar" loading="lazy">
                         <div>
                             <p class="name">Marco Kihn</p>
                             <p class="role">Happy Client</p>
@@ -381,7 +381,7 @@
                     </p>
                     <div class="testimonial-footer">
                         <img src="../img/smiling-young-pretty-caucasian-girl-isolated-purple-wall-with-copy-space.jpg"
-                            alt="Kristin Hester" class="avatar">
+                            alt="Kristin Hester" class="avatar" loading="lazy">
                         <div>
                             <p class="name">Kristin Hester</p>
                             <p class="role">Happy Client</p>
@@ -404,7 +404,7 @@
                     </p>
                     <div class="testimonial-footer">
                         <img src="../img/outdoor-shot-young-caucasian-man-with-beard-relaxing-open-air-surrounded-by-beautiful-mountain-setting-rainforest.jpg"
-                            alt="Zion Cisneros" class="avatar">
+                            alt="Zion Cisneros" class="avatar" loading="lazy">
                         <div>
                             <p class="name">Zion Cisneros</p>
                             <p class="role">Happy Client</p>
